# pretty-cfn

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: Makefile  README.md  verify.py
examples/cdk/appsync-dynamodb/: .gitignore  cdk.json  output.yaml  package-lock.json  package.json
examples/cdk/appsync-dynamodb/graphql/: schema.graphql
examples/cdk/appsync-dynamodb/lib/: appsync-dynamodb-stack.ts
examples/cdk/lambda-api/: cdk.json  output.yaml  package-lock.json  package.json
examples/cdk/s3-cloudfront/: cdk.json  output.yaml  package-lock.json  package.json  tsconfig.json
examples/cdk/sam-refactor-showcase/: cdk.json  output.yaml  package-lock.json  package.json
examples/cdk/step-functions/: cdk.json  output.yaml  package-lock.json  package.json
pretty_cfn/: __init__.py  cdk_cleaner.py  cdk_metadata.py  cli.py  exceptions.py  formatter.py  formatter_intrinsics.py  formatter_layout.py  main.py  server.py  service.py
pretty_cfn/agents/: __init__.py  refactor_workflow.py
pretty_cfn/samifier/: __init__.py  api_gateway.py  appsync.py  asset_stager.py  event_sources.py  function_converter.py  lambda_converter.py  optimizations.py  shared.py  state_machines.py
tests/: conftest.py  test_agents_refactor_workflow.py  test_cdk_cleaner.py  test_cdk_metadata.py  test_cli.py  test_examples_cfn_lint.py  test_formatter.py  test_kafka_nested.py  test_samifier.py  test_samifier_translator.py  test_server_integration.py  test_service_comments.py  test_service_directory_handling.py  test_service_fetch.py
(+28 files in other folders)
